style.css
/* ... */
/*@media only screen and (max-width: 950px)
{

    #bio
    {
        margin-top: 5%;
    }
    
    .container img
    {
        display: inline-block;
        margin-top: 5vw;
        width: 80%;
        margin-left: 10%;
        margin-right: 10%;
    }
    
    #socialMedia
    {
       margin-top: 5%; 
        margin-left: auto;
        margin-right: auto;
    }
    
    #aboutPic1 img
{
    display: none;
}

    .navbar li.logo img
{
    display: none;
}

#aboutPic2 img
{
    display: none;
}
}*/

@media only screen and (max-width: 1160px){
    #bio
    {
        position: relative;
        width: 80%;
        margin-right: auto;
        margin-left: auto;
        float: none;
        text-align: center;
    }
    
    .listenContainer{
        position: relative;
        text-align: center;
    }
    #socialContainer{
        position: relative;
        text-align: center;
    }
    #bioPic{
        position: relative;
        max-width: 100%;
        display: block;
        margin-right: auto;
        margin-left: auto;
        margin-top: 50px;
    }
    #medley{
        margin-right: 0;
    }
    
}
@media only screen and (max-width: 630px)
{
    /*mobile version - change navbar*/
     .navbar li.logo img
{
    display: none;
}
    
    .burger-nav
    {
        display: block;
        height: 40px;
        background: url(images/menu-alt-512.png) no-repeat 98% center;
        background-size: 30px;
        background-color: #333;
        cursor: pointer;
        z-index: 3;
    }
    
    .burger-nav.open
    {
        display: block;
        height: 40px;
        background: url(images/menu_open.png) no-repeat 98% center;
        background-size: 30px;
        background-color: #333;
        cursor: pointer;
    }
    
    .navbar
    {
        position: absolute;
        width: 100%;
        display: block;
        vertical-align: middle;
    }
    .navbar ul
{
    position: relative;
    margin-top: 40px;
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    background-color: #404040;
    top: 0;
    left: 0;
    width: 100%;
    height: 0;
}
    
    .navbar ul.open
    {
        height: auto;
    }

    .navbar li
{   
    float: none;
}

    .navbar li a
{
  display: block;
  color: white;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
    border-bottom: 1px solid #333;
}

    .navbar li a:hover {
    background-color: #111;
}

.navbar li.active a {
    background-color: #4CAF50;
}
    
    

    body
    {
        margin: 0;
        padding: 0;
        border: 0;
        outline: 0;
    }
    
    #bioPic{
        padding-bottom: 50px;
        width: 80%;
    }
    
    #bio
    {
    width: 80%;
    margin-top: 5%;
    text-align: center;
    }
    
    #bio.open
    {
        margin-top: 250px;
    }
    
    .container img
    {
        width: 80%;
        margin-left: 10%;
        margin-right: 10%;
        margin-top: 10px;
        padding: 0;
        
    }
    
    #socialMedia
    {
        padding: 0;
        float: none;
        
    }
    
    /*
    .contactform
    {
    margin-top: 5%;
    width: 80%;
    margin-bottom: 15px;
    margin-left: 10%;
    margin-right: 10%;
    }
    
    .contactform.open
    {
        margin-top: 250px;
    }

    input[type=text], select, textarea, input[type=email]
{   
    width: 100%;
    padding-top: 7px;
    padding-bottom: 7px;
    border: 1px solid #4CAF50;
    border-radius: 4px;
    box-sizing: border-box;
}
    
    button[type=submit]
{
    margin-top: 20px;
    margin-left: 30%;
    width: 40%;
    height: 50px;
    font-size: 15px;
    background-color: #4CAF50;
    color: white;
}
    */

    #aboutBody
    {
    margin-top: 5%;
    text-align: center;
    width: 80%;
    margin-left: 10%;
    margin-right: 10%;
    }
    
    #aboutBody.open
    {
        margin-top: 250px;
    }
    
    #aboutPic1{
        display: none;
    }
    #aboutPic2{
        display: none;
    }
    
    
    #UpcomingShows
    {
    width: 80%;
    margin-left: 5%;
    margin-top: 5%;
    }
    
    #UpcomingShows.open
    {
        margin-top: 250px;
    }
    
    .gallery.open{
        margin-top: 250px; 
    }
    
    #medley{
        margin-left: 0;
    }
    
    .listenContainer
    {
       text-align: center; 
    }
    
    audio
    {
        position: relative;
        width: 100%;
    }


.slideshow-container
{
    position: absolute;
    width: 100vw;
    height: 65vh;
    top: -40px;
    text-align: center;
}
    
.slideshow-container img
{
    max-width: 99vw;
    max-height: 65vh;
    border: none;
}

.previous
    {
        padding-bottom: 30px;
        top: 80vh;
        left: 30%;
    }
    
.next
    {
        padding-bottom: 30px;
        top: 80vh;
        right: 30%; 
    }
    
    .slideshow-container.open
    {
        transform: translate(0px, 230px);
    }

    .previous.open
    {
        transform: translate(0px, 230px);
    }
    .next.open
    {
        transform: translate(0px, 230px);
    }
    
    .formcontainer{
        width: 80%;
    }
    .formcontainer.open{
        margin-top: 250px;
    }
    
    .event_container{
        margin: 50px auto;
        min-height: calc(100% - 160px);
    }
    
    .event_container.open{
        margin-top: 320px;
    }
    
    .event{
        flex-direction: column;
    }
    
    .event .event_left{
        padding: 0;
        border-radius: 8px 8px 0 0;
    }
    
    .event .event_left .event_date .event_day,
    .event .event_left .event_data .event_month{
        display: inline-block;
        font-size: 24px;
    }
    
    .event .event_left .event_date{
        padding: 10px 0;
    }
}

